_sass/main.scss
/* Imports */

@import url("https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&family=Signika+Negative:wght@300..700&display=swap");

/* Variables */

$small-screen: 48em !default;
$medium-screen: 62em !default;
$large-screen: 75em !default;
$font-family-title: "Signika Negative", sans-serif;
$font-family-text: "Overpass", sans-serif;
$font-size-base: 1rem !default;
$font-size-h1: 2rem !default;
$font-weight-strong: 600;
$text-color: #595b61 !default;
$text-color-light: #6e6e70;
$bg-color: #fcfbfa;
$primary-color: #cba67a;
$card-bg-color: linear-gradient(
  145deg,
  #cba77a4b,
  $bg-color
);

/* General */

html {
  background: $bg-color;
  color: $text-color;
  font-family: $font-family-text;
  font-size: $font-size-base;
  font-weight: normal;
  height: 100%;
  overflow: hidden;
}

body {
  height: 100%;
}

/* Typography */

h1 {
  font-family: $font-family-title;
  font-size: $font-size-h1;
  font-weight: $font-weight-strong;
  line-height: 2rem;
}

p {
  word-spacing: 0.1rem;
}

a {
  color: $primary-color;
  text-decoration: none;

  &:hover {
    color: $text-color;
  }
}

.highlight-title {
  color: $primary-color;
}

.highlight-link {
  box-shadow: inset 0 -0.125rem 0 $primary-color;
  box-sizing: border-box;
  color: $primary-color;
  display: inline-block;
  padding: 0.125rem 0.125rem;
  transition: all 0.2s ease-in-out;

  &:hover {
    box-shadow: inset 0 -2rem 0 0 $primary-color;
    color: $text-color;
  }
}

/* Navigation card*/

nav ul {
  position: fixed;
  top: 40%;
  width: 6rem;
  height: 8.5rem;
  display: block;
  background: $card-bg-color;
  border-radius: 1rem;
  text-align: center;
  padding: 0.5rem 0.5rem;
}

nav li {
  list-style-type: none;
  margin: 0.25rem 0 0.25rem 0;
}

section {
  scroll-margin-top: 2rem;
}

/* Layout */

.layout {
  margin: 0.5rem;
  max-width: $large-screen;
  padding: 0.5rem 0.5rem;
}

.layout .card {
  background: $card-bg-color;
  border-radius: 2rem;
  margin: 3rem 0;
  padding: 1rem 2rem;
}

.layout .card .title {
  text-align: center;
  position: relative;
  //margin-top: 0;
}

.layout .card .subtitle {
  text-align: center;
}

.layout .card .description {
  text-align: left;
  color: $text-color-light;
}

.neumorphism-button {
  background: $bg-color;
  color: $primary-color;
  //background: linear-gradient(
  //  145deg,
  //  #cba77a4b,
  //  $bg-color
  //);
  //box-shadow: -4px -3px 2px 0 rgba(250, 250, 250, 0.13),
  //  4px 4px 2px 0 rgba(0, 0, 0, 0.4);
}

@mixin neumorphism-button-pressed {
  background: $primary-color;
  color: $bg-color;
  //background: linear-gradient(
  //  150deg,
  //  rgba(20, 20, 20, 0.4) 10%,
  //  rgba(115, 115, 115, 0.15) 80%
  //);
//  box-shadow: 1px 1px 2px 0 rgba(210, 210, 210, 0.4),
//    -1px -1px 2px rgba(0, 0, 0, 0.4), inset 3px 3px 2px 0 rgba(0, 0, 0, 0.4),
//    inset -1px -2px 2px rgba(210, 210, 210, 0.4);
}

//.neumorphism-card {
//  box-shadow: inset 2px 2px 4px $primary-color,
//    inset -2px -2px 4px $bg-color;
//}

//.neumorphism-card-big {
  //box-shadow: 5px 5px 4px #161718, -5px -5px 4px #404346;
//}

/* Preloader */

#preloader {
  align-items: center;
  background: $bg-color;
  display: flex;
  height: 100%;
  justify-content: center;
  left: 0;
  margin: 0.5rem;
  padding: 0.5rem;
  position: absolute;
  right: 0;
  z-index: 999;

  .load {
    height: 6rem;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 6rem;
  }

  .load hr {
    animation: spin 2s ease infinite;
    border: 0;
    height: 40%;
    margin: 0;
    position: absolute;
    width: 40%;
  }

  .load :first-child {
    animation-delay: -1.5s;
    background: $text-color;
  }

  .load :nth-child(2) {
    animation-delay: -1s;
    background: $primary-color;
  }

  .load :nth-child(3) {
    animation-delay: -0.5s;
    background: $text-color;
  }

  .load :last-child {
    background: $primary-color;
  }

  @keyframes spin {
    0%,
    100% {
      transform: translate(0);
    }
    25% {
      transform: translate(160%);
    }
    50% {
      transform: translate(160%, 160%);
    }
    75% {
      transform: translate(0, 160%);
    }
  }
}

/* Footer */

.footer {
  background: $bg-color;
  color: $text-color;
  margin: 0.5rem;
  padding: 1rem;
  text-align: center;
}

.footer a {
  color: $primary-color;

  &:hover,
  &:focus {
    background: $bg-color;
    color: $text-color;
  }
}

/* Landing Page */

#landing {
  background: $bg-color;
  color: $text-color;
  display: flex;
  height: 100%;
  margin: 0.5rem;
  padding: 0.5rem;
  text-align: center;
}

.landing-title {
  left: 0;
  margin: 0.5rem;
  padding: 0.5rem;
  position: absolute;
  right: 0;
  top: 40%;
}
/* ... */

